default/objects/Financial_Detail__c/Financial_Detail__c.object-meta.xml
<CustomObject>
    <label>Financial Detail</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Financial Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>