default/objects/Financial_Detail__c/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <label>Activation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>