default/objects/Financial_Detail__c/fields/Calculated_CF__c.field-meta.xml
<CustomField>
    <fullName>Calculated_CF__c</fullName>
    <label>Calculated CF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>