default/objects/Financial_Detail__c/fields/Cash_Cash_equivalent__c.field-meta.xml
<CustomField>
    <fullName>Cash_Cash_equivalent__c</fullName>
    <label>Cash/Cash equivalent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>