default/objects/Financial_Detail__c/fields/Cash_flow_ratio__c.field-meta.xml
<CustomField>
    <fullName>Cash_flow_ratio__c</fullName>
    <label>Cash flow ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>