default/objects/Financial_Detail__c/fields/Cost_of_goods_sold__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_goods_sold__c</fullName>
    <label>Cost of goods sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>