default/objects/Financial_Detail__c/fields/Current_ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_ratio__c</fullName>
    <label>Current ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>