default/objects/Financial_Detail__c/fields/Debt_to_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_EBITDA__c</fullName>
    <label>Debt to EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>