default/objects/Financial_Detail__c/fields/DPO_in_days__c.field-meta.xml
<CustomField>
    <fullName>DPO_in_days__c</fullName>
    <label>DPO in days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>