default/objects/Financial_Detail__c/fields/DSO_in_days__c.field-meta.xml
<CustomField>
    <fullName>DSO_in_days__c</fullName>
    <label>DSO in days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>