default/objects/Financial_Detail__c/fields/EAT__c.field-meta.xml
<CustomField>
    <fullName>EAT__c</fullName>
    <label>EAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>