default/objects/Financial_Detail__c/fields/EBIT_from_Crefo__c.field-meta.xml
<CustomField>
    <fullName>EBIT_from_Crefo__c</fullName>
    <label>EBIT from Crefo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>