default/objects/Financial_Detail__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>