default/objects/Financial_Detail__c/fields/EBITDA_coverage__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_coverage__c</fullName>
    <label>EBITDA coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>