default/objects/Financial_Detail__c/fields/Exceptional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Charges__c</fullName>
    <label>Exceptional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>