default/objects/Financial_Detail__c/fields/Exceptional_Income__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Income__c</fullName>
    <label>Exceptional Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>