default/objects/Financial_Detail__c/fields/Exceptional_Items_Total__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Items_Total__c</fullName>
    <label>Exceptional Items Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>