default/objects/Financial_Detail__c/fields/Extraordinary_Items__c.field-meta.xml
<CustomField>
    <fullName>Extraordinary_Items__c</fullName>
    <label>Extraordinary Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>