default/objects/Financial_Detail__c/fields/Financial_Charges__c.field-meta.xml
<CustomField>
    <fullName>Financial_Charges__c</fullName>
    <label>Financial Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>