default/objects/Financial_Detail__c/fields/Financial_Income__c.field-meta.xml
<CustomField>
    <fullName>Financial_Income__c</fullName>
    <label>Financial Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>