default/objects/Financial_Detail__c/fields/Financial_LT_Assets__c.field-meta.xml
<CustomField>
    <fullName>Financial_LT_Assets__c</fullName>
    <label>Financial LT Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>