default/objects/Financial_Detail__c/fields/Financial_module__c.field-meta.xml
<CustomField>
    <fullName>Financial_module__c</fullName>
    <label>Financial module</label>
    <referenceTo>Financial_Module__c</referenceTo>
    <relationshipName>Financial_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>