default/objects/Financial_Detail__c/fields/From_that_LT_bank_debt__c.field-meta.xml
<CustomField>
    <fullName>From_that_LT_bank_debt__c</fullName>
    <label>From that LT bank debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>