default/objects/Financial_Detail__c/fields/From_that_Other_LT_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>From_that_Other_LT_Liabilities__c</fullName>
    <label>From that Other LT Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>