default/objects/Financial_Detail__c/fields/From_that_Trade_Creditors__c.field-meta.xml
<CustomField>
    <fullName>From_that_Trade_Creditors__c</fullName>
    <label>From that Trade Creditors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>