default/objects/Financial_Detail__c/fields/Gross_profit_loss__c.field-meta.xml
<CustomField>
    <fullName>Gross_profit_loss__c</fullName>
    <label>Gross profit loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>