default/objects/Financial_Detail__c/fields/Income_and_other_taxes__c.field-meta.xml
<CustomField>
    <fullName>Income_and_other_taxes__c</fullName>
    <label>Income and other taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>