default/objects/Financial_Detail__c/fields/Intangible_Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Intangible_Fixed_Assets__c</fullName>
    <label>Intangible Fixed Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>