default/objects/Financial_Detail__c/fields/Leasing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Engagement__c</fullName>
    <label>Leasing Engagement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>