default/objects/Financial_Detail__c/fields/Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Liabilities__c</fullName>
    <label>Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>