default/objects/Financial_Detail__c/fields/LongTerm_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>LongTerm_Liabilities__c</fullName>
    <label>LongTerm Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>