default/objects/Financial_Detail__c/fields/Net_Interest_expense__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_expense__c</fullName>
    <label>Net Interest expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>