default/objects/Financial_Detail__c/fields/Net_worth__c.field-meta.xml
<CustomField>
    <fullName>Net_worth__c</fullName>
    <label>Net worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>