default/objects/Financial_Detail__c/fields/Number_of_Ratios__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ratios__c</fullName>
    <label>Number of Ratios</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>