default/objects/Financial_Detail__c/fields/Operational_profit_EBIT__c.field-meta.xml
<CustomField>
    <fullName>Operational_profit_EBIT__c</fullName>
    <label>Operational profit EBIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>