default/objects/Financial_Detail__c/fields/Other_Fixed_assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Fixed_assets__c</fullName>
    <label>Other Fixed assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>