default/objects/Financial_Detail__c/fields/Other_operational_income__c.field-meta.xml
<CustomField>
    <fullName>Other_operational_income__c</fullName>
    <label>Other operational income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>