default/objects/Financial_Detail__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>