default/objects/Financial_Detail__c/fields/Others_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Others_Current_Assets__c</fullName>
    <label>Others Current Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>