default/objects/Financial_Detail__c/fields/Overall_score__c.field-meta.xml
<CustomField>
    <fullName>Overall_score__c</fullName>
    <label>Overall score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>