default/objects/Financial_Detail__c/fields/Profitability__c.field-meta.xml
<CustomField>
    <fullName>Profitability__c</fullName>
    <label>Profitability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>