default/objects/Financial_Detail__c/fields/Quick_acid_ratio__c.field-meta.xml
<CustomField>
    <fullName>Quick_acid_ratio__c</fullName>
    <label>Quick &quot;acid&quot; ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>