default/objects/Financial_Detail__c/fields/Reserves__c.field-meta.xml
<CustomField>
    <fullName>Reserves__c</fullName>
    <label>Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>