default/objects/Financial_Detail__c/fields/ROA_calculation_includes_taxes_x_D_B__c.field-meta.xml
<CustomField>
    <fullName>ROA_calculation_includes_taxes_x_D_B__c</fullName>
    <label>ROA (calculation includes taxes x D&amp;B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>