default/objects/Financial_Detail__c/fields/ROE_without_Reserves__c.field-meta.xml
<CustomField>
    <fullName>ROE_without_Reserves__c</fullName>
    <label>ROE (without Reserves)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>