default/objects/Financial_Detail__c/fields/ShortTerm_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>ShortTerm_Liabilities__c</fullName>
    <label>ShortTerm Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>