default/objects/Financial_Detail__c/fields/Solvency_ratio__c.field-meta.xml
<CustomField>
    <fullName>Solvency_ratio__c</fullName>
    <label>Solvency ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>