default/objects/Financial_Detail__c/fields/Stock_material_work__c.field-meta.xml
<CustomField>
    <fullName>Stock_material_work__c</fullName>
    <label>Stock, material &amp; work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>