default/objects/Financial_Detail__c/fields/Tangible_Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Tangible_Fixed_Assets__c</fullName>
    <label>Tangible Fixed Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>