default/objects/Financial_Detail__c/fields/Total_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Turnover__c</fullName>
    <label>Total Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>