default/objects/Financial_Detail__c/fields/Trade_debtors__c.field-meta.xml
<CustomField>
    <fullName>Trade_debtors__c</fullName>
    <label>Trade debtors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>