default/objects/Financial_Detail__c/fields/Working_capital__c.field-meta.xml
<CustomField>
    <fullName>Working_capital__c</fullName>
    <label>Working capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>